--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<!-- <link rel="shortcut icon" href="images/icon.png"> -->
+	<link rel="shortcut icon" href="images/icon.png">
 	<title>Gallery Parco Cibo</title>
 	<!-- bootstrap plugins -->
 	<link rel="stylesheet" href="css/bootstrap.css">
