--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 
 	  <div class="container-fluid col-xs-12 col-md-12">
 	    <div class="navbar-header col-sm-3 col-md-3">
-	      <div class="navbar-brand col-sm-12 col-xs-12 text-center"><a href="index1.html">Gallery Parco Cibo</a></div>
+	      <div class="navbar-brand col-sm-12 col-xs-12 text-center"><a href="index1.html" id="logo">Gallery Parco Cibo</a></div>
 	    </div>
 	    <ul class="nav navbar-nav cold sm-9 col-md-right-9">
 		    <li><a href="#">Paulo</a></li>
